# imas-mcp

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COVERAGE_PLAN.md  DECORATED_SERVICE_IMPLEMENTATION_PLAN.md  DECORATOR_TEST_ISSUES.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PLAN_MCP_TOOLS.md  DOCKER.md  DOMAIN_ANALYZER_REFACTORING_SUMMARY.md  Dockerfile  FEATURE_COMPARISON_REPORT.md  IMAS_MCP_TOOLS_ANALYSIS_REPORT.md  IMPLEMENTATION_PLAN.md  JSON_PIPELINE_IMPLEMENTATION_PLAN.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHYSICS_EXTRACTION_QUICKSTART.md  PHYSICS_EXTRACTION_WORKPLAN.md  README.md  REFACTORING_IMPLEMENTATION_PLAN.md  RESOURCES_MIGRATION.md  TEST_REFACTORING_PLAN.md  TODO.md  WIKI_SCRAPING_SETUP.md  __main__.py  asv.conf.json  build_index.py  docker-compose.yml  docker-entrypoint.sh  env.example  fix_syntax.py  fix_tests.py  get_index_name.py  hatch_build_hooks.py  index.json  (+17 more)
.asv/results/: benchmarks.json
.claude/: settings.json
.claude/agents/: facility-explorer.md  graph-querier.md
.claude/skills/: facility-access.md  graph-queries.md  mapping-workflow.md  schema-summary.md
.cursor/: mcp.json
.github/: docs-sources.yml
.github/agents/: architect.agent.md  develop.agent.md  engineer.agent.md  explore.agent.md  fleet.agent.md  forge.agent.md  graph.agent.md  implement.agent.md  ingest.agent.md
.github/instructions/: copilot-instructions.md  refactoring.instructions.md
.github/prompts/: commit.prompt.md  (+5 more)
agents/: README.md  develop.md  explore.md  graph.md  ingest.md  onboard.md  schema-reference.md
benchmarks/: README.md  __init__.py  asv.conf.json  bench_embeddings.py  bench_graph_queries.py  bench_mcp_facility_tools.py  bench_mcp_imas_tools.py  bench_mcp_search.py  bench_memory.py  bench_query_builder.py  bench_server_startup.py  bench_subsystems.py  benchmark_runner.py  benchmarks.py  conftest_bench.py  performance_targets.py
docs/: README.md  agent-teams.md  claude-code-setup.md  client-setup.md  copilot-cli-guide.md  zellij-quickstart.md
examples/: search_by_keywords.py
imas_codex/: __init__.py  __main__.py  cli.py  data_cli.py  dd_accessor.py  health.py  providers.py  resource_path_accessor.py  resource_provider.py  server.py  settings.py
imas_mcp/: __init__.py  cli.py  data_dictionary_index.py  dd_accessor.py  exceptions.py  graph_analyzer.py  health.py  lexicographic_search.py  mcp_server_ai.py  physics_context.py  physics_integration.py  providers.py  resource_path_accessor.py  resource_provider.py  resources.py  schema_accessor.py  search_result.py  server.py  settings.py  tools.py  tools_original.py  whoosh_index.py
imas_mcp_server/: __init__.py  __main__.py  _path_index.py  data_dictionary_index.py  data_dictionary_transformer.py  indexer.py  lexicographic_search.py  mcp_imas.py  path_index.py  path_index_cache.py  path_search.py  search_result.py  server.py  version.py  whoosh_index.py
index/: .gitkeep
plans/: AMBIX_PLAN.md  CODEX_PLAN.md  COVERAGE_PLAN.md  DD_VERSION_EVOLUTION.md  DISCOVERY_AGENT_PROPOSAL.md  DISCOVERY_STRATEGY.md  FACILITY_KNOWLEDGE.md  IMAS_DD_GRAPH.md  KNOWLEDGE_GRAPH.md  LLAMAINDEX_AGENTS.md  LLAMAINDEX_REFACTOR.md  MDSPLUS_INGESTION.md  MDSPLUS_TREE_EXPLORATION.md  README.md  STRATEGY.md  TREENODE_ENRICHMENT.md  TREENODE_PATH_CONSISTENCY.md  UNIFIED_GRAPH_ARCHITECTURE.md  WIKI_INGESTION.md  crafted-mcp-tools.md  discovery-prompt-optimization.md  gpu-cluster-internet-justification.md  gpu-cluster-scoping.md  graph-agent-interaction.md  phase8-smoke-results.md
research/: ab_review_sonnet_primary.py  budget-allocation-audit.md  cache_probe.py  comments-20260426T143548Z.jsonl  comments-20260426T182706Z.jsonl  comments-20260426T211753Z.jsonl  comments-w28b-transport-pre-clear-20260426T062307Z.jsonl  comments-w7a-gyrokinetics-20260425T122850Z.jsonl  comments-w7a-particle_measurement_diagnostics-20260425T122850Z.jsonl  comments-w7a-plasma_wall_interactions-20260425T122850Z.jsonl  cycle-trace-2usd.md  probe-e-summary.md  reviewer-pattern-audit.md  uncertainty-index-leak.md  w37-set-a-results.md  w37-set-b-results.md  w37-set-c-results.md  wave7-synthesis.md  wave9-synthesis.md
scripts/: README.md  __init__.py  add_docs.py  asv_build.py  backfill_grammar_decomposition.py  backfill_sn_segments.py  backfill_sn_unit_mismatches.py  backfill_unit_invariant.py  benchmark_embedding.py  benchmark_serialization.py  benchmark_ssh_throughput.py  build_clusters.py  build_database.py  build_dd_graph.py  build_discovery.py  build_discovery_models.py  build_embeddings.py  build_index.py  build_migrations.py  build_models.py  build_path_map.py  build_physics.py  build_physics_domains.py  build_relationships.py  build_schemas.py  dd_version.py  diag_unit_flow.py  discover_mdsplus.py  discover_static.py  docs.py  enrich_tree_metadata.py  gen_physics_domains.py  gen_schema_context.py  gen_schema_reference.py  get_index_name.py  imas_mcp_sdcc.sh  index_name.py  ingest_all_trees.sh  ingest_mdsplus.py  ingest_tdi.py  (+33 more)
slurm/: codex-embed.sh  ollama-llm.sh
tests/: conftest.py  test_agentic_session.py  test_base_search_engines.py  test_benchmark_setup.py  test_cli.py  test_core_decorators.py  test_data_dictionary_entry.py  test_dd_accessor.py  test_decorator_enhancements.py  test_docs_functions.py  test_docs_server_env_config.py  test_docs_server_lifecycle.py  test_docs_server_real_npx.py  test_docs_server_with_npx.py  test_embedding_encoder.py  test_embeddings_deferred.py  test_encoder.py  test_enhancement_strategy.py  test_enhancer_integration.py  test_enhancer_performance.py  test_explain_tool.py  test_export_tool.py  test_graph_analyzer.py  test_health_endpoint.py  test_identifiers_tool.py  test_imas_search_remediation.py  test_indexer.py  test_mcp_server.py  test_overview_tool.py  test_path_index.py  test_path_index_cache.py  test_path_index_keywords.py  test_path_tool.py  test_physics_integration.py  test_physics_search.py  test_relationships_tool.py  test_resource_accessors.py  test_resources.py  test_result_models_metadata.py  test_run_domain_cycles.py  (+27 more)
~/: .wezterm.lua
(+2050 files in other folders)
